<resources>
    <string name="app_name">Contatore</string>
    <string name="Diminuisci">--</string>
    <string name="Aumenta">++</string>
    <string name="Messaggio">Hai cliccato 0 volte</string>
    <string name="Inizio">Premi i pulsati per iniziare</string>
    <string name="Valore">Il contatore vale </string>
    <string name="Azzeramento">Azzera</string>
    <string name="Raddoppia">Raddoppia</string>
</resources>
